syntax = "proto3";

option go_package = "github.com/hobbyfarm/gargantua/pkg/protobuf";

import "google/api/annotations.proto";
import "hobbyfarm/hobbyfarm.proto";

service VirtualMachineTemplateService {
  rpc List(Empty) returns (VirtualMachineTemplateList) {
    option(google.api.http) = {
      get: "/api/v2/virtualmachinetemplates";
    };
  }

  rpc Get(ID) returns (VirtualMachineTemplate) {
    option(google.api.http) = {
      get: "/api/v2/virtualmachinetemplates/{ID}";
    };
  }

  rpc Create(VirtualMachineTemplate) returns (VirtualMachineTemplate) {
    option(google.api.http) = {
      post: "/api/v2/virtualmachinetemplates";
      body: "*";
    };
  }

  rpc Update(VirtualMachineTemplate) returns (VirtualMachineTemplate) {
    option(google.api.http) = {
      put: "/api/v2/virtualmachinetemplates/{Name}";
      body: "*";
    };
  }

  rpc Delete(ID) returns (Empty) {
    option(google.api.http) = {
      delete: "/api/v2/virtualmachinetemplates/{ID}";
    };
  }
}

message VirtualMachineTemplateList {
  repeated VirtualMachineTemplate VirtualMachineTemplates = 1;
}